fix(plugins/plugin-client-common): guidebooks render poorly in big windows with large fonts
we are using a fixed 960px in a few places.
also, dangit, but the wizard nav gets too narrow in these cases.

--- a/plugins/plugin-client-common/web/scss/components/Wizard/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/Wizard/PatternFly.scss
@@ -39,7 +39,7 @@
   }
   @include WizardNav {
     width: auto;
-    min-width: 8rem;
+    min-width: 14rem;
     max-width: 16rem;
     position: unset;
   }
